Fix article padding and align logo

--- a/css/main.css
+++ b/css/main.css
@@ -51,6 +51,9 @@ header img {
     width: 40%;
     max-width: 150px;
     margin: auto;
+		display: block;
+		padding-bottom: 2%;
+		padding-top: 2%;
 }
 
 #text {
@@ -108,7 +111,7 @@ article {
 }
 
 #colors div {
-    display: inline;
+    display: inline-block;
     margin: auto;
 }
 
@@ -116,8 +119,8 @@ article {
     max-width: 70px;
 }
 
-#imgblock div {
-    display: inline;
+#imgblock {
+
 		margin: auto;
 }
 
@@ -161,12 +164,15 @@ article {
 			margin-left: 5%;
 			margin-top: 5%;
 			margin-bottom: 0%;
+			padding-bottom: 0%;
+			padding-top: 2%;
 		}
 
 		#imgblock {
 			display: inline-block;
 			background-color: white;
 			width: 45%;
+			margin-bottom: 5%;
 			margin-left: 5%;
 		}
     .group:after {
